fest：css盒模型计算

--- a/1HTML面试题/块级元素和内联元素.html
+++ b/1HTML面试题/块级元素和内联元素.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- 
+        块级元素：
+            display:block/table,div h1 h2 table ul ol p等
+        内联元素：
+            display:inline/inline-block,span img input button等
+     -->
 </body>
 </html>
