--- a/2css面试题/04BFC理解和应用.html
+++ b/2css面试题/04BFC理解和应用.html
@@ -11,6 +11,9 @@
         .left {
             float: left;
         }
+        .bfc {
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
@@ -21,5 +24,8 @@
             float不是none  position是absolute和fixed overflow不是visible display是flex inline-block等
         BFC常见应用：清除浮动
     -->
+    <div class="container">
+        <img />
+    </div>
 </body>
 </html>
