--- a/3js面试题/01.值类型和引用类型.html
+++ b/3js面试题/01.值类型和引用类型.html
@@ -9,6 +9,8 @@
     <!-- 
         1.值类型：undefined string number boolean symbol
             typeof识别所有值类型，能判断函数，不能判断引用类型
+        == 和 ===
+            判断是否为空可以用==  其余全部用===
      -->
 </body>
 </html>
