--- a/6异步/01单线程和异步.html
+++ b/6异步/01单线程和异步.html
@@ -13,7 +13,7 @@
             遇到等待（网络请求，定时任务）不能卡住
             需要异步
         异步和同步：
-            
+            基于js是单线程语言，异步不会阻塞执行，同步会阻塞代码执行
         异步的应用场景：
             网络请求，如ajax，图片加载
             定时任务：如setTimeout
