--- a/08JS-Web-API/03.如何优化DOM性能.html
+++ b/08JS-Web-API/03.如何优化DOM性能.html
@@ -21,6 +21,9 @@
         for(let i = 0; i < length;i++) {
             //缓存length，只进行了一次dom查询
         }
+
+        // 、频繁操作，改为一次
+        
     </script>
 </body>
 </html>
